<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SecondFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!--start of student name-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">
            <TextView
                android:id="@+id/student_nameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_name" />
            <EditText
                android:id="@+id/student_nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>
        </LinearLayout>
        <!--end of student name-->

        <!--start of student grade-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp"
            android:weightSum="1">
            <TextView
                android:id="@+id/gradeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade"
                android:layout_weight="0.2" />
            <Spinner
                android:id="@+id/gradeSpin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:entries="@array/gradeSpinItems">
            </Spinner>
        </LinearLayout>
        <!--end of student grade-->

        <!--start of address 1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp"
            android:weightSum="1">
            <TextView
                android:id="@+id/address1TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address1"
                android:layout_weight="0.2" />
            <EditText
                android:id="@+id/address1ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8">
            </EditText>
        </LinearLayout>
        <!--end of address 1-->

        <!--start of address 2-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp"
            android:weightSum="1">
            <TextView
                android:id="@+id/address2TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address2"
                android:layout_weight="0.2" />
            <EditText
                android:id="@+id/address2ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8">
            </EditText>
        </LinearLayout>
        <!--end of address 2-->

        <!--start of city-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp"
            android:weightSum="1">
            <TextView
                android:id="@+id/cityTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:layout_weight="0.2" />
            <EditText
                android:id="@+id/cityET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8">
            </EditText>
        </LinearLayout>
        <!--end of city-->

        <!--start of state-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp"
            android:weightSum="1">
            <TextView
                android:id="@+id/stateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:layout_weight="0.2" />
            <EditText
                android:id="@+id/stateET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8">
            </EditText>
        </LinearLayout>
        <!--end of state-->

        <!--start of courses-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp"
            android:weightSum="1">
            <TextView
                android:id="@+id/coursesTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/courses"
                android:layout_weight="0.2" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/optionsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <!--end of courses-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/editBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit" />
            <Button
                android:id="@+id/deleteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete" />
            <Button
                android:id="@+id/submitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit" />
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>